--- a/tsui/Views/Shared/_Layout.cshtml
+++ b/tsui/Views/Shared/_Layout.cshtml
@@ -22,9 +22,22 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Users</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item"><a class="nav-link text-dark" id="qsLogoutBtn" asp-controller="Account" asp-action="Logout">Logout</a></li>
+
+                        }
+                        else
+                        {
+                            <li class="nav-item"><a class="nav-link text-dark" id="qsLoginBtn" asp-controller="Account" asp-action="Login">Login</a></li>
+                        }
                     </ul>
+
                 </div>
             </div>
         </nav>
